--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "dev": "parcel -p 4200 src/index.html",
-    "build": "parcel build src/index.html"
+    "build": "parcel build src/index.html --no-source-maps"
   },
   "author": "Gulajava",
   "license": "MIT",
