--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
   },
   "author": "Gulajava",
   "license": "MIT",
+  "engines": {
+    "node": ">=12.0.0"
+  },
   "devDependencies": {
     "eslint": "^6.8.0",
     "eslint-config-airbnb": "^18.0.1",
