--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "app.js",
   "scripts": {
     "dev": "parcel -p 4200 src/index.html",
+    "devcard": "parcel -p 4200 src/index_deckcard.html",
     "build": "parcel build src/index.html --no-source-maps"
   },
   "author": "Gulajava",
