--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "parcel -p 4200 src/index.html",
     "devcard": "parcel -p 4200 src/index_deckcard.html",
     "devdom1": "parcel -p 4200 src/doms/index.html",
+    "devdom2": "parcel -p 4200 src/domsmanipulat/index.html",
     "build": "parcel build src/index.html --no-source-maps"
   },
   "author": "Gulajava",
