--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "devcard": "parcel -p 4200 src/index_deckcard.html",
     "devdom1": "parcel -p 4200 src/doms/index.html",
     "devdom2": "parcel -p 4200 src/domsmanipulat/index.html",
+    "devdom3": "parcel -p 4200 src/domsmanipulat2/index.html",
     "build": "parcel build src/index.html --no-source-maps"
   },
   "author": "Gulajava",
@@ -24,7 +25,7 @@
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-node": "^10.0.0",
     "eslint-plugin-prettier": "^3.1.2",
-    "eslint-plugin-react": "^7.17.0",
+    "eslint-plugin-react": "^7.18.0",
     "eslint-plugin-react-hooks": "^1.7.0",
     "parcel-bundler": "^1.12.4",
     "prettier": "^1.19.1"
