--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "devdom2": "parcel -p 4200 src/domsmanipulat2/index.html",
     "devdom3": "parcel -p 4200 src/domsmanipulat3/index.html",
     "devdom4": "parcel -p 4200 src/domsmanipulat4/index.html",
+    "devdom5": "parcel -p 4200 src/domsmanipulat5/index.html",
     "build": "parcel build src/index.html --no-source-maps"
   },
   "author": "Gulajava",
