--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "devdom3": "parcel -p 4200 src/domsmanipulat3/index.html",
     "devdom4": "parcel -p 4200 src/domsmanipulat4/index.html",
     "devdom5": "parcel -p 4200 src/domsmanipulat5/index.html",
+    "devdom6": "parcel -p 4200 src/domsmanipulat6/index.html",
     "build": "parcel build src/index.html --no-source-maps"
   },
   "author": "Gulajava",
