--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "devdom5": "parcel -p 4200 src/domsmanipulat5/index.html",
     "devdom6": "parcel -p 4200 src/domsmanipulat6/index.html",
     "devdombasket": "parcel -p 4200 src/domsmanipulattest/index.html",
+    "devdomevent1": "parcel -p 4200 src/eventsp1/index.html",
     "build": "parcel build src/index.html --no-source-maps"
   },
   "author": "Gulajava",
