--- a/package.json
+++ b/package.json
@@ -16,8 +16,9 @@
     "devdombasket": "parcel -p 4200 src/domsmanipulattest/index.html",
     "devdomevent1": "parcel -p 4200 src/eventsp1/index.html",
     "devdomevent1test": "parcel -p 4200 src/eventsp1testing/index.html",
+    "devdomevent2": "parcel -p 4200 src/eventsp2/index.html",
     "build": "parcel build src/index.html --no-source-maps",
-    "deploygithub": "parcel build index.html --public-url /githubdomain/"
+    "deploygithub": "parcel build src/index.html --public-url /githubdomain/"
   },
   "author": "Gulajava",
   "license": "MIT",
