--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "devdomevent1test": "parcel -p 4200 src/eventsp1testing/index.html",
     "devdomevent2": "parcel -p 4200 src/eventsp2/index.html",
     "deveventgamekoin": "parcel -p 4200 src/eventsp3gamecoin/index.html",
+    "devdomevent4": "parcel -p 4200 src/eventsp4/index.html",
     "build": "parcel build src/index.html --no-source-maps",
     "deploygithub": "parcel build src/index.html --public-url /githubdomain/"
   },
