testing: XMLHttpRequest Promise

--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "deploygithub": "parcel build src/index.html --public-url /githubdomain/",
     "devcallback1": "parcel -p 4200 src/asyncjs/async1/index.html",
     "devcallback2": "parcel -p 4200 src/asyncjs/async2/index.html",
-    "devcallback3": "parcel -p 4200 src/asyncjs/async3/index.html"
+    "devcallback3": "parcel -p 4200 src/asyncjs/async3/index.html",
+    "devcallback4": "parcel -p 4200 src/asyncjs/async4/index.html",
+    "devhttpreq": "parcel -p 4200 src/asyncjs/async5/index.html"
   },
   "author": "Gulajava",
   "license": "MIT",
