--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "devcallback2": "parcel -p 4200 src/asyncjs/async2/index.html",
     "devcallback3": "parcel -p 4200 src/asyncjs/async3/index.html",
     "devcallback4": "parcel -p 4200 src/asyncjs/async4/index.html",
-    "devhttpreq": "parcel -p 4200 src/asyncjs/async5/index.html"
+    "devhttpreq": "parcel -p 4200 src/asyncjs/async5/index.html",
+    "devhttpfetch": "parcel -p 4200 src/asyncjs/async6/index.html"
   },
   "author": "Gulajava",
   "license": "MIT",
