--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "devcallback4": "parcel -p 4200 src/asyncjs/async4/index.html",
     "devhttpreq": "parcel -p 4200 src/asyncjs/async5/index.html",
     "devhttpfetch": "parcel -p 4200 src/asyncjs/async6/index.html",
-    "devhttpaxios": "parcel -p 4200 src/asyncjs/async7/index.html"
+    "devhttpaxios": "parcel -p 4200 src/asyncjs/async7/index.html",
+    "devhttpasyncawait": "parcel -p 4200 src/asyncjs/async8/index.html"
   },
   "author": "Gulajava",
   "license": "MIT",
@@ -35,6 +36,8 @@
     "node": ">=12.0.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.8.4",
+    "@babel/plugin-transform-runtime": "^7.8.3",
     "eslint": "^6.8.0",
     "eslint-config-airbnb": "^18.0.1",
     "eslint-config-node": "^4.0.0",
@@ -49,6 +52,7 @@
     "prettier": "^1.19.1"
   },
   "dependencies": {
+    "@babel/runtime": "^7.8.4",
     "axios": "^0.19.2"
   }
 }
