--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "devhttpfetch": "parcel -p 4200 src/asyncjs/async6/index.html",
     "devhttpaxios": "parcel -p 4200 src/asyncjs/async7/index.html",
     "devhttpasyncawait1": "parcel -p 4200 src/asyncjs/async8/index.html",
-    "devhttpasyncawait2": "parcel -p 4200 src/asyncjs/async9/index.html"
+    "devhttpasyncawait2": "parcel -p 4200 src/asyncjs/async9/index.html",
+    "devclass1": "parcel -p 4200 src/oopjs/classjs1/index.html"
   },
   "author": "Gulajava",
   "license": "MIT",
