--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -38,7 +38,7 @@
         "**/.idea/": true,
     },
     "workbench.colorCustomizations": {
-        "editorCursor.foreground": "#fabd2f",
-        "terminalCursor.foreground": "#fabd2f"
+        "editorCursor.foreground": "#fd5e53",
+        "terminalCursor.foreground": "#fd5e53"
     }
 }
