--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "devhttpaxios": "parcel -p 4200 src/asyncjs/async7/index.html",
     "devhttpasyncawait1": "parcel -p 4200 src/asyncjs/async8/index.html",
     "devhttpasyncawait2": "parcel -p 4200 src/asyncjs/async9/index.html",
-    "devclass1": "parcel -p 4200 src/oopjs/classjs1/index.html"
+    "devclass1": "parcel -p 4200 src/oopjs/classjs1/index.html",
+    "devclass2": "parcel -p 4200 src/oopjs/classjs2/index.html"
   },
   "author": "Gulajava",
   "license": "MIT",
@@ -43,12 +44,12 @@
     "eslint": "^6.8.0",
     "eslint-config-airbnb": "^18.0.1",
     "eslint-config-node": "^4.0.0",
-    "eslint-config-prettier": "^6.9.0",
-    "eslint-plugin-import": "^2.20.0",
+    "eslint-config-prettier": "^6.10.0",
+    "eslint-plugin-import": "^2.20.1",
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-node": "^10.0.0",
     "eslint-plugin-prettier": "^3.1.2",
-    "eslint-plugin-react": "^7.18.0",
+    "eslint-plugin-react": "^7.18.3",
     "eslint-plugin-react-hooks": "^1.7.0",
     "parcel-bundler": "^1.12.4",
     "prettier": "^1.19.1"
